[package]
name = "doiwannaknow"
version = "0.1.0"
authors = ["Flarp <flurpdadurp@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
diesel = { version = "0.14.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
dotenv = "0.9.0"
dotenv_macros = "0.10.0"
serde = "1.0.10"
serde_derive = "1.0.10"
r2d2 = "0.7.3"
r2d2-diesel = "0.14.0"

[dependencies.rocket_contrib]
version = "0.3.0"
default-features = false
features = ["handlebars_templates", "json"]
